// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The LoginColumnLayout component, with one column, matches the snapshot 1`] = `
.c2 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c4 {
  margin-top: 20px;
  width: 200px;
}

.c3 {
  margin-top: 40px;
  width: 360px;
}

.c5 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c6 {
  padding: 0 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 480px;
}

@media screen and ( max-width:1024px ) {
  .c1:not(:only-child) {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Welcome back!
        </span>
      </h1>
      <p
        className="c6"
      >
        <span>
          Log in with your email address and password. If you don't remember your password, just reset it!
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`The LoginColumnLayout component, with two columns, matches the snapshot 1`] = `
.c10 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c10:hover,
.c10:focus {
  color: #fff;
}

.c10:hover,
.c10:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c10:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c2 {
  padding: 0px;
  width: 480px;
  height: 480px;
  text-align: center;
}

.c4 {
  margin-top: 20px;
  width: 200px;
}

.c3 {
  margin-top: 40px;
  width: 360px;
}

.c5 {
  font-size: 1.5em;
  margin: 0.8333em;
}

.c6 {
  padding: 0 2em;
}

.c8 {
  position: relative;
  bottom: 0;
  margin-top: 40px;
  width: 100%;
}

.c9 {
  margin: 1em 0;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 480px;
}

.c7 {
  margin-left: 48px;
}

@media screen and ( max-width:1024px ) {
  .c1:not(:only-child) {
    display: none;
  }
}

@media screen and ( max-width:1024px ) {
  .c7 {
    margin-left: 0;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Welcome back!
        </span>
      </h1>
      <p
        className="c6"
      >
        <span>
          Log in with your email address and password. If you don't remember your password, just reset it!
        </span>
      </p>
    </div>
  </div>
  <div
    className="c7"
  >
    <div
      className="c2"
    >
      <img
        alt="MyYoast - Yoast Academy"
        className="c3"
        src="my-yoast-academy-logo.svg"
      />
      <img
        alt=""
        className="c4"
        src="greeting.png"
      />
      <h1
        className="c5"
      >
        <span>
          Password changed successfully!
        </span>
      </h1>
      <div
        className="c8"
      >
        <a
          aria-label={undefined}
          className="c9 c10"
          href="https://example.com"
          rel={undefined}
          target={undefined}
        >
          <span>
            Continue to MyYoast
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
